# rust-os

./: Cargo.toml  x86_64-rust_os.json
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/tests/: basic_boot.rs  should_panic.rs
tests/: basic_boot.rs
