[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"
authors = ["Hobospider132 <https://github.com/hobospider132/rust-os>" ]

 [[test]]
 name = "should_panic"
 harness = false
 path = "tests/should_panic.rs"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = ["-device", "isa-debug-exit,iobase=0xfa,iosize=0x04", "-serial", "stdio", "-display", "none"]